GNOME Bugzilla – Bug 699799
st-theme-node: Make sure that two NULL paint states are not equal
Last modified: 2013-05-07 09:15:24 UTC
The comment clearly intended that for this to be the case, but a typo prevented this from actually being done. This fixes the focused state of the search field not working more than once.
Created attachment 243454 [details] [review] st-theme-node: Make sure that two NULL paint states are not equal
Review of attachment 243454 [details] [review]: Looks fine
Attachment 243454 [details] pushed as eb80503 - st-theme-node: Make sure that two NULL paint states are not equal