st-theme-node: Make sure that two NULL paint states are not equal

The comment clearly intended that for this to be the case, but a typo
prevented this from actually being done. This fixes the focused state
of the search field not working more than once.

https://bugzilla.gnome.org/show_bug.cgi?id=699799

[endlessm/eos-shell#1214]