src/st/st-theme-node.c
@@ -3709,7 +3709,7 @@ st_theme_node_paint_equal (StThemeNode *node,
 
   /* Make sure NULL != NULL */
   if (node == NULL || other == NULL)
-    return TRUE;
+    return FALSE;
 
   if (node == other)
     return TRUE;
